commit 1604 selenium